--- a/src/components/Species.astro
+++ b/src/components/Species.astro
@@ -28,6 +28,12 @@ const species = [
     distribution: 'Chatham islands.',
     img: './chatham-albatross.jpg',
   },
+  {
+    name: 'Gray headed Albatross',
+    distribution:
+      'From latitude 60° S north to Arica. It nests on the Diego Ramírez and Ildefonso islands.',
+    img: './gray-headed-albatross.jpg',
+  },
 ]
 ---
 
