props & style adjusted

--- a/src/components/Species.astro
+++ b/src/components/Species.astro
@@ -5,34 +5,34 @@ const species = [
   {
     name: 'Antipodean Albatross',
     distribution: 'In Chilean waters during its resting period.',
-    img: './antipodean-albatross.jpg',
+    url: 'antipodean-albatross',
   },
   {
     name: 'Atlantic yellow nosed Albatross',
     distribution: 'Records south of Cape Horn.',
-    img: './atlantic-yellow-nosed-albatross.jpg',
+    url: 'atlantic-yellow-nosed-albatross',
   },
   {
     name: 'Black browed Albatross',
     distribution: 'Southern seas between latitudes 23° S. and 60° S.',
-    img: './black-browed-albatross.jpg',
+    url: 'black-browed-albatross',
   },
   {
     name: 'Bullers Albatross',
     distribution:
       'Occasional visitor to the coastal area. Recorded south of Iquique, Bahia Salada (Atacama), Valparaiso and the mouth of the Aconcagua River.',
-    img: './bullers-albatross.jpg',
+    url: 'bullers-albatross',
   },
   {
     name: 'Chatham Albatross',
     distribution: 'Chatham islands.',
-    img: './chatham-albatross.jpg',
+    url: 'chatham-albatross',
   },
   {
     name: 'Gray headed Albatross',
     distribution:
       'From latitude 60° S north to Arica. It nests on the Diego Ramírez and Ildefonso islands.',
-    img: './gray-headed-albatross.jpg',
+    url: 'gray-headed-albatross',
   },
 ]
 ---
