--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,14 +1,16 @@
 ---
-const { href, name, distribution, img } = Astro.props
+const { name, distribution, url } = Astro.props
 ---
 
 <li class="link-card">
-  <a href={href}>
-    <img src={img} alt="Antipodean Albatross" width="100%" />
-    <h3>{name}</h3>
-    <p>
-      {distribution}
-    </p>
+  <a href={`/species/${url}`} {name}>
+    <img src={`./${url}.jpg`} alt={name} width="100%" loading="lazy" />
+    <div class="data">
+      <h3>{name}</h3>
+      <p>
+        {distribution}
+      </p>
+    </div>
   </a>
 </li>
 <style>
@@ -24,8 +26,8 @@ const { href, name, distribution, img } = Astro.props
   .link-card {
     list-style: none;
     display: flex;
-    padding: 0.15rem;
-    background-image: var(--link-gradient);
+    /* padding: 0.15rem; */
+    /* background-image: var(--link-gradient); */
     background-size: 400%;
     border-radius: 0.5rem;
     background-position: 100%;
@@ -36,11 +38,16 @@ const { href, name, distribution, img } = Astro.props
     width: 100%;
     text-decoration: none;
     line-height: 1.4;
-    padding: 1em 1.3em;
+    /* padding: 0.3em; */
     border-radius: 0.35rem;
     color: var(--text-color);
     background-color: white;
     opacity: 0.8;
+  }
+
+  .link-card .data {
+    padding: 0.5rem;
+    /* color: red; */
   }
 
   h3 {
@@ -53,7 +60,7 @@ const { href, name, distribution, img } = Astro.props
     margin-bottom: 0;
   }
 
-  h2 span {
+  h3 span {
     display: inline-block;
     transition: transform 0.3s cubic-bezier(0.22, 1, 0.36, 1);
   }
@@ -62,16 +69,25 @@ const { href, name, distribution, img } = Astro.props
     background-position: 0;
   }
 
-  .link-card:is(:hover, :focus-within) h2 {
+  .link-card:is(:hover, :focus-within) h3 {
     color: #4f39fa;
   }
 
-  .link-card:is(:hover, :focus-within) h2 span {
+  .link-card:is(:hover, :focus-within) h3 span {
     will-change: transform;
     transform: translateX(2px);
   }
 
+  .link-card:is(:hover, :focus-within) > a {
+    will-change: transform;
+    transform: scale(1.3);
+    z-index: 1;
+    opacity: 1;
+    box-shadow: 0px 0px 300px 1px rgb(0, 0, 0, 0.3);
+    transition: transform 0.6s cubic-bezier(0.22, 1, 0.36, 1);
+  }
+
   img {
-    border-radius: 0.3rem;
+    border-radius: 0.3rem 0.3rem 0 0;
   }
 </style>
