--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,13 +3,12 @@ import Layout from '../layouts/Layout.astro'
 import Species from '../components/Species.astro'
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Birds">
   <main>
     <h1>Chilean <span class="text-gradient">Birds</span></h1>
     <p class="instructions">
-      Birds of Chile, from desert to ice, from the high Andean plateau at the
-      edge of the dries desert in the world to the fertile valleys, the
-      sclerophyll forests and the current in the central Pacific coast.
+      From the high Andean plateau at the edge of the most dry desert in the
+      world to the current in the central Pacific coast.
     </p>
     <ul role="list" class="link-card-grid">
       <Species />
