--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,6 +22,10 @@ const { title } = Astro.props
         --color-text: hsl(12, 5%, 4%);
         --color-bg: hsl(10, 21%, 95%);
         --color-border: hsl(17, 24%, 90%);
+
+        --color-primary: #1127ec;
+        --color-secondary: #00aeff;
+        --astro-gradient: linear-gradient(-30deg, #00aeff, #1127ec);
       }
 
       html {
@@ -32,7 +36,10 @@ const { title } = Astro.props
       }
 
       body {
-        margin: 0;
+        margin: auto;
+        padding: 1em;
+        max-width: 70ch;
+        position: relative;
       }
 
       :global(h1) {
