--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -48,6 +48,11 @@ const { title } = Astro.props
 
       :global(h2) {
         font-size: var(--font-size-lg);
+        opacity: 0.8;
+      }
+      :global(p) {
+        margin: 0 0 2ch;
+        opacity: 0.8;
       }
 
       :global(code) {
