--- a/src/pages/[name].astro
+++ b/src/pages/[name].astro
@@ -33,5 +33,7 @@ const { Content, frontmatter } = Astro.props.post
   img {
     border-radius: 0.3rem;
     width: 100%;
+    opacity: 0.8;
+    margin-bottom: 5ch;
   }
 </style>
