--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -4,7 +4,7 @@ const { name, distribution, url } = Astro.props
 
 <li class="link-card">
   <a href={`/${url}`} {name}>
-    <img src={`./${url}.jpg`} alt={name} width="100%" loading="lazy" />
+    <img src={`./${url}.avif`} alt={name} width="100%" loading="lazy" />
     <div class="data">
       <h3>{name}</h3>
       <p>
@@ -15,8 +15,8 @@ const { name, distribution, url } = Astro.props
 </li>
 <style>
   .link-card {
-    list-style: none;
     display: flex;
+    list-style: none;
     background-size: 400%;
     border-radius: 0.5rem;
     background-position: 100%;
@@ -25,42 +25,32 @@ const { name, distribution, url } = Astro.props
 
   .link-card > a {
     width: 100%;
-    text-decoration: none;
+    opacity: 0.8;
     line-height: 1.4;
     border-radius: 0.35rem;
-    color: var(--text-color);
+    text-decoration: none;
     background-color: white;
-    opacity: 0.8;
-  }
-
-  .link-card .data {
-    padding: 0.5rem;
-  }
-
-  h3 {
-    margin: 0;
-    transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-  }
-
-  p {
-    margin-top: 0.75rem;
-    margin-bottom: 0;
-  }
-
-  h3 span {
-    display: inline-block;
-    transition: transform 0.3s cubic-bezier(0.22, 1, 0.36, 1);
-  }
-
-  .link-card:is(:hover, :focus-within) h3 {
-    color: #4f39fa;
-  }
-
-  .link-card:is(:hover, :focus-within) > a {
-    box-shadow: 0px 7px 30px 10px rgb(0, 0, 0, 0.1);
+    color: var(--text-color);
   }
 
   img {
     border-radius: 0.3rem 0.3rem 0 0;
+  }
+
+  .link-card .data {
+    gap: 1.5ch;
+    padding: 1.5ch;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .link-card:is(:hover, :focus-within) h3 {
+    color: #4f39fa;
+    transition: 0.6s cubic-bezier(0.22, 1, 0.36, 1);
+  }
+
+  .link-card:is(:hover, :focus-within) > a {
+    border: rgb(77, 77, 77);
+    box-shadow: 0px 7px 30px 10px rgb(0, 0, 0, 0.1);
   }
 </style>
