--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,39 +1,48 @@
-<a href="/">
-  <h1>Chilean <span class="text-gradient">Birds</span></h1>
-</a>
+<div class="navbar">
+  <a href="/">
+    <div class="logo">
+      <h1>Chilean <span class="text-gradient">Birds</span></h1>
+    </div>
+  </a>
+</div>
 
 <style>
-  a {
-    text-decoration: none;
-    color: var(--text-color);
-  }
-
-  h1 {
-    margin: 2rem 0;
-    position: sticky;
+  .navbar {
     top: 0px;
     z-index: 1;
+    width: 100%;
+    margin: 2ch 0;
+    position: sticky;
     background-color: var(--color-bg);
+  }
+
+  .logo {
+    color: var(--color-text);
+  }
+
+  a {
+    text-decoration: none;
   }
 
   .text-gradient {
     font-weight: 900;
-    background-image: var(--astro-gradient);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
     background-size: 100% 200%;
     background-position-y: 100%;
-    border-radius: 0.4rem;
+    background-image: var(--astro-gradient);
     animation: pulse 4s ease-in-out infinite;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
   }
 
   @keyframes pulse {
-    0%,
-    100% {
+    0% {
       background-position-y: 0%;
     }
     50% {
       background-position-y: 80%;
+    }
+    100% {
+      background-position-y: 0%;
     }
   }
 </style>
