--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -44,20 +44,22 @@ const { title } = Astro.props
 
       :global(h1) {
         font-size: var(--font-size-xl);
+        margin: 0;
       }
 
       :global(h2) {
         font-size: var(--font-size-lg);
-        opacity: 0.8;
-      }
-      :global(p) {
-        margin: 0 0 2ch;
+        margin: 3ch 0 1ch 0;
         opacity: 0.8;
       }
 
-      :global(code) {
-        font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
-          DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
+      :global(h3) {
+        margin: 0;
+      }
+
+      :global(p) {
+        margin: 0;
+        opacity: 0.8;
       }
     </style>
   </body>
