--- a/src/pages/[name].astro
+++ b/src/pages/[name].astro
@@ -1,4 +1,5 @@
 ---
+import Tags from '../components/Tags.astro'
 import Layout from '../layouts/Layout.astro'
 
 export async function getStaticPaths() {
@@ -16,6 +17,7 @@ const { Content, frontmatter } = Astro.props.post
 ---
 
 <Layout title={frontmatter.name}>
+  <Tags active={frontmatter.tag} />
   <div class="species">
     <h1>{frontmatter.name}</h1>
     <img
