--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ const posts = await Astro.glob('../../species/*.md')
     margin-bottom: 5ch;
     border-radius: 1ch;
     color: var(--color-bg);
-    text-shadow: 1px 1px 5px black;
+    text-shadow: 1px 1px 5px rgb(0, 0, 0, 0.3);
     background: var(--astro-gradient);
   }
 
