--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -27,7 +27,8 @@ const { name, distribution, url, an, al } = Astro.props
     background-size: 400%;
     border-radius: 0.5rem;
     background-position: 100%;
-    transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
+    transition: all 0.6s cubic-bezier(0.22, 1, 0.36, 1);
+    overflow: hidden;
   }
 
   .link-card > a {
@@ -45,6 +46,11 @@ const { name, distribution, url, an, al } = Astro.props
     height: auto;
     border-radius: 0.3rem 0.3rem 0 0;
     aspect-ratio-box: auto;
+    transition: all 0.6s cubic-bezier(0.22, 1, 0.36, 1);
+  }
+
+  .link-card:is(:hover) img {
+    transform: scale(1.05);
   }
 
   .link-card .data {
@@ -54,13 +60,8 @@ const { name, distribution, url, an, al } = Astro.props
     flex-direction: column;
   }
 
-  .link-card:is(:hover, :focus-within) h3 {
-    color: #4f39fa;
+  .link-card:is(:hover) h3 {
+    color: var(--color-primary);
     transition: 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-  }
-
-  .link-card:is(:hover, :focus-within) > a {
-    border: rgb(77, 77, 77);
-    box-shadow: 0px 7px 30px 10px rgb(0, 0, 0, 0.1);
   }
 </style>
