--- a/src/components/Tags.astro
+++ b/src/components/Tags.astro
@@ -42,7 +42,13 @@ const { active } = Astro.props
     background-size: 100%;
     text-decoration: none;
     border-radius: 3ch;
+    border: 1px solid transparent;
     background-color: rgb(221, 221, 221);
+  }
+
+  .tag:hover {
+    border: 1px solid var(--color-primary);
+    background-color: rgb(221, 221, 221, 0.3);
   }
 
   .active {
