--- a/src/pages/[name].astro
+++ b/src/pages/[name].astro
@@ -1,4 +1,5 @@
 ---
+import Navbar from '../components/Navbar.astro'
 import Tags from '../components/Tags.astro'
 import Layout from '../layouts/Layout.astro'
 
@@ -17,6 +18,7 @@ const { Content, frontmatter } = Astro.props.post
 ---
 
 <Layout title={frontmatter.name}>
+  <Navbar />
   <Tags active={frontmatter.tag} />
   <div class="species">
     <h1>{frontmatter.name}</h1>
