--- a/src/components/Tags.astro
+++ b/src/components/Tags.astro
@@ -1,30 +1,61 @@
 ---
 const { active } = Astro.props
+
+const list = [
+  {
+    tag: '/',
+    title: 'All',
+  },
+  {
+    tag: 'EX',
+    title: 'Extinct',
+  },
+  {
+    tag: 'EW',
+    title: 'Extinct in the wild',
+  },
+  {
+    tag: 'CR',
+    title: 'Critically endangered',
+  },
+  {
+    tag: 'EN',
+    title: 'Endangered',
+  },
+  {
+    tag: 'VU',
+    title: 'Vulnerable',
+  },
+  {
+    tag: 'NT',
+    title: 'Near threatened',
+  },
+  {
+    tag: 'LC',
+    title: 'Least concern',
+  },
+  {
+    tag: 'DD',
+    title: 'Data deficient',
+  },
+  {
+    tag: 'NE',
+    title: 'Not evaluated',
+  },
+]
 ---
 
 <div class="tagsContainer">
-  <a href="/" class={`tag ${'/' === active ? 'active' : ''}`}> All</a>
-  <a href="EX" class={`tag ${'EX' === active ? 'active' : ''}`}> Extinct</a>
-  <a href="EW" class={`tag ${'EW' === active ? 'active' : ''}`}>
-    Extinct in the wild</a
-  >
-  <a href="CR" class={`tag ${'CR' === active ? 'active' : ''}`}>
-    Critically endangered</a
-  >
-  <a href="EN" class={`tag ${'EN' === active ? 'active' : ''}`}> Endangered</a>
-  <a href="VU" class={`tag ${'VU' === active ? 'active' : ''}`}> Vulnerable</a>
-  <a href="NT" class={`tag ${'NT' === active ? 'active' : ''}`}>
-    Near threatened</a
-  >
-  <a href="LC" class={`tag ${'LC' === active ? 'active' : ''}`}>
-    Least concern</a
-  >
-  <a href="DD" class={`tag ${'DD' === active ? 'active' : ''}`}>
-    Data deficient</a
-  >
-  <a href="NE" class={`tag ${'NE' === active ? 'active' : ''}`}>
-    Not evaluated</a
-  >
+  {
+    list.map(item => {
+      const temp = item.tag === active ? 'tag active' : 'tag'
+      return (
+        <a href={item.tag} class={temp}>
+          {item.title}
+        </a>
+      )
+    })
+  }
 </div>
 
 <style>
@@ -34,6 +65,7 @@ const { active } = Astro.props
     gap: 1ch;
     margin-bottom: 4ch;
   }
+
   .tag {
     padding: 1ch;
     font-size: medium;
