--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -3,7 +3,7 @@ const { posts } = Astro.props
 ---
 
 <ul role="list" class="link-card-grid">
-  {posts.map(post => (
+  {posts?.map(post => (
 
     <li class="link-card">
       <a href={`/${post.frontmatter.url}`} {post.frontmatter.name}>
@@ -36,6 +36,7 @@ const { posts } = Astro.props
     list-style: none;
     background-size: 400%;
     border-radius: 0.5rem;
+    border: 1px solid #cecece;
     background-position: 100%;
     transition: all 0.6s cubic-bezier(0.22, 1, 0.36, 1);
     overflow: hidden;
