--- a/src/components/ScrollUp.astro
+++ b/src/components/ScrollUp.astro
@@ -1,6 +1,6 @@
 <div class="scrollUp">
   <a href="#">
-    <img src="scrollUp.svg" />
+    <img src="scrollUp.svg" width="40px" height="40px" alt="Scroll up button" />
   </a>
 </div>
 
@@ -9,6 +9,5 @@
     position: fixed;
     bottom: 30px;
     right: 30px;
-    stroke: red;
   }
 </style>
