--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -68,6 +68,14 @@ const { title } = Astro.props
         margin: 0;
         opacity: 0.8;
       }
+
+      :global(input),
+      :global(textarea),
+      :global(button),
+      :global(select),
+      :global(a) {
+        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+      }
     </style>
   </body>
 </html>
