--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -54,9 +54,9 @@ const { posts } = Astro.props
 
   img {
     width: 100%;
-    height: auto;
+    object-fit:cover;
+    max-height: 200px;
     border-radius: 0.3rem 0.3rem 0 0;
-    aspect-ratio-box: auto;
     transition: all 0.6s cubic-bezier(0.22, 1, 0.36, 1);
   }
 
