--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from '../components/Footer.astro'
 import ScrollUp from '../components/ScrollUp.astro'
 
 const { title } = Astro.props
@@ -15,7 +16,9 @@ const { title } = Astro.props
   </head>
   <body>
     <slot />
+    <Footer />
     <ScrollUp />
+
     <style>
       :root {
         --font-size-base: clamp(1rem, 0.34vw + 0.91rem, 1.19rem);
