--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -28,7 +28,7 @@ const last = new Date().toLocaleDateString('en-us', {
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    border-top: 1px solid #cecece;
+    border-top: 1px solid var(--color-border);
   }
 
   img {
