--- a/src/components/Tags.astro
+++ b/src/components/Tags.astro
@@ -19,25 +19,25 @@ const { active } = Astro.props
 
 <style>
   .tagsContainer {
+    gap: 1ch;
     display: flex;
     flex-wrap: wrap;
-    gap: 1ch;
     margin-bottom: 4ch;
   }
 
   .tag {
     padding: 1ch;
+    color: #505050;
     font-size: medium;
+    border-radius: 3ch;
     padding-inline: 2ch;
-    color: rgb(80, 80, 80);
     background-size: 100%;
     text-decoration: none;
-    border-radius: 3ch;
-    background-color: rgb(221, 221, 221);
+    background-color: #dddddd;
   }
 
   .tag:hover {
-    background-color: rgb(221, 221, 221, 0.3);
+    background-color: #dddddd4d;
   }
 
   .active {
