--- a/src/components/TagPageComp.astro
+++ b/src/components/TagPageComp.astro
@@ -2,7 +2,6 @@
 import Layout from '../layouts/Layout.astro'
 import Card from '../components/Card.astro'
 import Tags from '../components/Tags.astro'
-import Navbar from './Navbar.astro'
 
 const { pTag } = Astro.props
 const posts = await Astro.glob('../../species/*.md')
@@ -10,9 +9,8 @@ const filteredPosts = posts.filter(p => p.frontmatter.tag === pTag)
 ---
 
 <Layout title="Chilean birds">
-  <Navbar />
   <Tags active={pTag} />
-  <p style="border-bottom: 1px solid #cecece; padding-bottom: 1ch;">
+  <p style="border-bottom: 1px solid var(--color-border); padding-bottom: 1ch;">
     {
       filteredPosts.length === 1
         ? `${filteredPosts.length} result.`
