--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Footer from '../components/Footer.astro'
+import Navbar from '../components/Navbar.astro'
 import ScrollUp from '../components/ScrollUp.astro'
 
 const { title } = Astro.props
@@ -15,6 +16,7 @@ const { title } = Astro.props
     <title>{title ? title : 'Chilean birds'}</title>
   </head>
   <body>
+    <Navbar />
     <slot />
     <Footer />
     <ScrollUp />
@@ -25,9 +27,9 @@ const { title } = Astro.props
         --font-size-lg: clamp(1.2rem, 0.7vw + 1.2rem, 1.5rem);
         --font-size-xl: clamp(2.44rem, 2.38vw + 1.85rem, 3.75rem);
 
-        --color-text: hsl(12, 5%, 4%);
-        --color-bg: hsl(10, 21%, 95%);
-        --color-border: hsl(17, 24%, 90%);
+        --color-text: #0b0a0a;
+        --color-bg: #f5f0f0;
+        --color-border: #dddddd;
 
         --color-primary: #16689f;
         --color-secondary: #04264c;
@@ -74,7 +76,7 @@ const { title } = Astro.props
 
       :global(td, th) {
         opacity: 0.8;
-        text-align: center;
+        text-align: left;
       }
 
       :global(input, textarea, button, select, a) {
