--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,17 +3,21 @@ import Footer from '../components/Footer.astro'
 import Navbar from '../components/Navbar.astro'
 import ScrollUp from '../components/ScrollUp.astro'
 
-const { title } = Astro.props
+const {
+  title = 'Chilean birds',
+  description = 'From the high Andean plateau at the edge of the most dry desert in the world to the current in the central Pacific coast.',
+} = Astro.props
 ---
 
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>{title}</title>
     <meta charset="UTF-8" />
+    <meta name="description" content={description} />
+    <meta name="generator" content={Astro.generator} />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{title ? title : 'Chilean birds'}</title>
   </head>
   <body>
     <Navbar />
