max width & line height adjusted

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -54,7 +54,7 @@ const {
       body {
         margin: auto;
         padding: 1em;
-        max-width: 70ch;
+        max-width: 85ch;
         position: relative;
       }
 
@@ -76,6 +76,7 @@ const {
       :global(p) {
         margin: 0;
         opacity: 0.8;
+        line-height: 1.6;
       }
 
       :global(td, th) {
