footer padding added

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -25,6 +25,7 @@ const last = new Date().toLocaleDateString('en-us', {
     display: flex;
     margin-top: 3ch;
     padding-top: 3ch;
+    margin-bottom: 3ch;
     align-items: center;
     flex-direction: column;
     justify-content: center;
