tags align center

--- a/src/components/Tags.astro
+++ b/src/components/Tags.astro
@@ -23,6 +23,7 @@ const { active } = Astro.props
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 4ch;
+    justify-content: center;
   }
 
   .tag {
