--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -85,7 +85,7 @@ const {
         text-align: left;
       }
 
-      :global(input, textarea, button, select, a) {
+      :global(input, textarea, button, select, a, summary) {
         -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
       }
 
