--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,5 +1,14 @@
-<div>
-  <h1>Chilean <span class="text-gradient">Birds</span></h1>
+<div class="hero">
+  <h1>
+    <span
+      style="--content: 'Chilean'; --start-color: var(--color-secondary); --end-color: var(--color-primary); --delay: 0s;"
+      >Chilean</span
+    >
+    <span
+      style="--content: 'Birds'; --start-color: var(--color-primary); --end-color: var(--color-primary); --delay: 3s;"
+      >Birds</span
+    >
+  </h1>
 
   <p class="description">
     From the high Andean plateau at the edge of the most dry desert in the world
@@ -8,30 +17,40 @@
 </div>
 
 <style>
+  .hero {
+    display: flex;
+    flex-direction: column;
+    gap: 3ch;
+  }
   h1 {
     text-align: center;
     font-size: var(--font-size-2xl);
+    font-weight: 900;
+    line-height: 1.1;
+    color: var(--color-text);
   }
 
-  .text-gradient {
-    font-weight: 900;
-    background-size: 100% 300%;
-    background-position-y: 100%;
-    background-image: var(--astro-gradient);
-    animation: pulse 4s ease-in-out infinite;
+  span {
+    position: relative;
+  }
+
+  span::before {
+    position: absolute;
+    content: var(--content);
+    animation: pulse 6s ease infinite;
+    animation-delay: var(--delay);
+    background: linear-gradient(45deg, var(--start-color), var(--end-color));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
 
   @keyframes pulse {
-    0% {
-      background-position-y: 0%;
+    0%,
+    100% {
+      opacity: 1;
     }
     50% {
-      background-position-y: 100%;
-    }
-    100% {
-      background-position-y: 0%;
+      opacity: 0;
     }
   }
 
