hero animation adjusted

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,7 +1,7 @@
 <div class="hero">
   <h1>
     <span class="text-gradient">Chilean</span>
-    <span class="text-gradient" style="animation-delay: 1s;">Birds</span>
+    <span class="text-gradient">Birds</span>
   </h1>
 
   <p class="description">
