fix mobile animation

--- a/src/components/Birds.astro
+++ b/src/components/Birds.astro
@@ -158,9 +158,15 @@
         transform: translate(-20vw, 30vh) scale(1);
         opacity: 1;
       }
-      100% {
-        transform: translate(110vw, 10vh) scale(0.6);
+
+      80% {
+        transform: translate(70vw, 13vh) scale(0.7);
         opacity: 1;
+      }
+
+      100% {
+        transform: translate(90vw, 10vh) scale(0.6);
+        opacity: 0;
       }
     }
   }
