--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -25,10 +25,15 @@
   }
 
   .text-gradient {
-    background-size: 100% 3000%;
+    background-size: 100% 300%;
     background-position-y: 100%;
-    background-image: var(--astro-gradient);
-    animation: pulse 6s ease infinite;
+    background-image: linear-gradient(
+      -20deg,
+      var(--color-primary),
+      #5a9ddb,
+      var(--color-primary)
+    );
+    animation: pulse 10s ease infinite;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
